refactor(modules): compose the GUI boot pipeline in the UI layer; the engine bootstrap goes fully AWT-free
The launcher bootstrap carried the GUI-only steps -- the X11 WM_CLASS override, the display diagnostics line, the Skiko cap, and a crash handler that opens the Swing dialog -- guarded only by reachability. The GUI pipeline now lives in a ui bootstrap package (GuiBootstrap composes prepareCore -> toolkit setup -> its own crash handler -> finishBoot, with prepareCore/finishBoot now the engine's public composition points), and CrashReporter loses its Swing half: report generation and persistence stay headless in the engine, the post-crash dialog moves to the UI layer next to the shell-recovery state that already calls it. client-launcher now contains zero AWT/Swing references; the CLI's preBootHeadless is unchanged.