@@ -21,32 +21,30 @@ import org.koin.core.module.Module
 import org.slf4j.LoggerFactory
 import java.nio.file.Files
 import java.util.UUID
-import javax.swing.SwingUtilities
 import kotlin.system.exitProcess
 
 /**
- * Everything that has to happen before Compose's `application { ... }`
- * picks up the JVM: log directory resolution so logback.xml's
- * `${nexira.logs.dir}` substitution works on the very first
- * LoggerFactory call, pending data-dir migration, session-id tagging,
- * NetworkState SSL-bypass restore, X11 toolkit override, crash handler,
- * single-instance lock, Koin startup.
+ * Everything that has to happen before an entrypoint takes over the JVM:
+ * log directory resolution so logback.xml's `${nexira.logs.dir}`
+ * substitution works on the very first LoggerFactory call, pending
+ * data-dir migration, session-id tagging, NetworkState SSL-bypass
+ * restore, crash-report handler, single-instance lock, Koin startup.
  *
- * Result is the small set of values the Compose layer needs to keep
+ * Result is the small set of values the entrypoint needs to keep
  * threading through: the resolved [PlatformPaths] (for window-side
  * `.show` watcher and data-dir-relative reads) and a possibly non-null
  * [DataDirMigration.Source] that gates whether the first composition
  * shows MigrationScreen or AppRoot.
  *
- * [preBoot] runs the full GUI pipeline (display setup + Swing crash
- * dialog) and is called from [hivens.ui.Main.main] before
- * `application { ... }`. [preBootHeadless] runs the same data/logging/Koin
- * setup WITHOUT any AWT/Swing touch -- the native-image CLI entrypoint
- * (:client-cli) uses it. The GUI-only paths (XToolkitOverride,
- * DisplayDiagnostics, CrashReporter.showCrashDialog, SwingUtilities) are
- * reachable ONLY from [preBoot], so they stay out of the CLI's reachable
- * graph and AWT never enters the native image -- which is the whole point,
- * since AWT/Skiko is what blocks native-image of the Compose GUI.
+ * This module is AWT-free by construction. Entry pipelines COMPOSE the
+ * public pieces: [preBootHeadless] is the CLI's whole pipeline (a
+ * log-and-persist crash handler, no single-instance lock);
+ * the GUI pipeline lives with the UI layer (hivens.ui.bootstrap), which
+ * runs [prepareCore], layers its toolkit setup + Swing crash dialog on
+ * top, then calls [finishBoot]. Keeping the GUI edge out of this module
+ * keeps AWT out of the CLI's reachable graph and out of the native
+ * image -- which is the whole point, since AWT/Skiko is what blocks
+ * native-image of the Compose GUI.
  *
  * Anything that should run AFTER Koin but before the Compose entry
  * (puppet server startup, UI Koin module registration) is the caller's
@@ -69,32 +67,11 @@ object LauncherBootstrap {
         val crashReporter: CrashReporter,
     )
 
-    /**
-     * Run the full pre-Compose pipeline for the GUI launcher. [extraModules]
-     * is appended to the launcher's own Koin modules at [startKoin] time so
-     * callers (the ui module) can register their singletons in the same Koin
-     * context without LauncherBootstrap having to know about them.
-     */
-    fun preBoot(extraModules: List<Module> = emptyList()): Result {
-        val (paths, crashReporter) = prepareCore()
-
-        System.setProperty("skiko.fps.limit", "60")
-
-        // X11 WM_CLASS override. See XToolkitOverride doc for the
-        // cross-vendor reflection rationale; the JVM must have been
-        // launched with `--add-opens=java.desktop/sun.awt.X11=ALL-UNNAMED`.
-        // Runs after prepareCore() set nexira.logs.dir so the diagnostics
-        // line below lands in the configured launcher.log.
-        XToolkitOverride.applyLinuxAppClassName()
-
-        // One INFO line per launch summarising toolkit + Wayland/X11 env --
-        // gives every user-attached launcher.log enough context for triage.
-        DisplayDiagnostics.logEnvironment()
-
-        installGuiCrashHandler(crashReporter)
-
-        return finishBoot(paths, crashReporter, extraModules, singleInstance = true)
-    }
+    /** Pre-Koin core values an entry pipeline composes [finishBoot] around. */
+    data class Core(
+        val paths: PlatformPaths,
+        val crashReporter: CrashReporter,
+    )
 
     /**
      * Headless variant for the CLI / native-image entrypoint: identical
@@ -104,18 +81,20 @@ object LauncherBootstrap {
      * instance instead of silently exiting when the GUI holds the lock.
      */
     fun preBootHeadless(extraModules: List<Module> = emptyList()): Result {
-        val (paths, crashReporter) = prepareCore()
-        installHeadlessCrashHandler(crashReporter)
-        return finishBoot(paths, crashReporter, extraModules, singleInstance = false)
+        val core = prepareCore()
+        installHeadlessCrashHandler(core.crashReporter)
+        return finishBoot(core, extraModules, singleInstance = false)
     }
 
     /**
      * AWT-free core: log dir + data-dir migration + session tagging +
      * NetworkState restore + data dir + CrashReporter. Shared verbatim by
-     * both entrypoints; contains zero references to AWT/Swing so the CLI's
-     * reachable graph stays clean.
+     * every entrypoint; contains zero references to AWT/Swing so the CLI's
+     * reachable graph stays clean. Public for the GUI pipeline in
+     * hivens.ui.bootstrap, which layers toolkit setup + its Swing crash
+     * handler between this and [finishBoot].
      */
-    private fun prepareCore(): Pair<PlatformPaths, CrashReporter> {
+    fun prepareCore(): Core {
         // Resolve logs dir BEFORE any LoggerFactory.getLogger() call so
         // logback.xml (which reads `${nexira.logs.dir}` for its rolling-file
         // appenders) sees the platform-correct path on its very first init.
@@ -196,34 +175,13 @@ object LauncherBootstrap {
         // identical.
         val crashReporter = CrashReporter(paths)
 
-        return paths to crashReporter
-    }
-
-    /**
-     * GUI crash handler: persists the report AND surfaces the Swing dialog.
-     * Reachable only from [preBoot] -- this is the single edge that would
-     * otherwise drag AWT/Swing into the native-image CLI.
-     */
-    private fun installGuiCrashHandler(crashReporter: CrashReporter) {
-        Thread.setDefaultUncaughtExceptionHandler { thread, throwable ->
-            val handlerLog = LoggerFactory.getLogger("CrashHandler")
-            handlerLog.error("Uncaught exception on thread '${thread.name}'", throwable)
-            // This handler is for crashes OFF the composition path (background
-            // threads, coroutines). Shell-composition crashes unwind
-            // `application {}` and are recovered by the restart loop in
-            // hivens.ui.Main instead -- they never reach here.
-            runCatching {
-                val report     = crashReporter.generate(throwable, thread)
-                val reportFile = crashReporter.saveToDisk(report)
-                SwingUtilities.invokeLater { crashReporter.showCrashDialog(report, reportFile) }
-            }
-        }
+        return Core(paths, crashReporter)
     }
 
     /**
      * Headless crash handler: logs and persists the report to disk, no
-     * Swing dialog. AWT-free -- references only [CrashReporter.generate] /
-     * [CrashReporter.saveToDisk], never showCrashDialog.
+     * Swing dialog. The GUI pipeline installs its own dialog-showing
+     * handler instead.
      */
     private fun installHeadlessCrashHandler(crashReporter: CrashReporter) {
         Thread.setDefaultUncaughtExceptionHandler { thread, throwable ->
@@ -239,14 +197,15 @@ object LauncherBootstrap {
 
     /**
      * Shared tail: single-instance lock (GUI only), migration detection,
-     * Koin startup. AWT-free.
+     * Koin startup. AWT-free. Public for the GUI pipeline in
+     * hivens.ui.bootstrap.
      */
-    private fun finishBoot(
-        paths: PlatformPaths,
-        crashReporter: CrashReporter,
+    fun finishBoot(
+        core: Core,
         extraModules: List<Module>,
         singleInstance: Boolean,
     ): Result {
+        val (paths, crashReporter) = core
         // Single-instance lock acquired BEFORE migration is consulted. Two
         // launchers started close together would otherwise both render the
         // MigrationScreen and race on file copies. DataDirMigration's
